--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p class="skills">Graphic Design Intern at Minhas Safety Concerns</p>
     </div>
     <div id = "buttonDiv">
-        <a href="Assets/Resume Final.pdf" download>
+        <a href="Assets/Resume Final.pdf" download class = "buttonLink">
             <button class = "button">download resume</button>
         </a>
     </div>
