--- a/projects.html
+++ b/projects.html
@@ -301,14 +301,14 @@
 
     <div id = "sectionTen">
         <div class = "slideShowHeading">
-            <p><span class = "slideShowHeadingSpan">Characters,</span> Pencil on Paper</p>
+            <p><span class = "slideShowHeadingSpan">Digital Art,</span> Photoshop</p>
         </div>
         <div class = "slideShowDiv">
             <div class = "slideShow">
-                <img src="Assets/Characters/1.jpeg" alt = "temp" class = "slideShowImage" id = "slideShowFour">
+                <img src="Assets/Digital Art/1.png" alt = "temp" class = "slideShowImage" id = "slideShowFour">
                 <div class = "slideShowButtons">
                     <button class = "slideShowButtonRight" onclick="slideChangeFour('left')">←</button>
-                    <p class = "slideShowCount"><span id = "slideShowFourCount">1</span>/5</p>
+                    <p class = "slideShowCount"><span id = "slideShowFourCount">1</span>/6</p>
                     <button class = "slideShowButtonLeft" onclick="slideChangeFour('right')">→</button>
                 </div>
             </div>
@@ -377,14 +377,14 @@
 
     <div id = "sectionFourteen">
         <div class = "slideShowHeading">
-            <p><span class = "slideShowHeadingSpan">Hands,</span> Pencil on Paper</p>
+            <p><span class = "slideShowHeadingSpan">Drawings,</span> Pencil on Paper</p>
         </div>
         <div class = "slideShowDiv">
             <div class = "slideShow">
                 <img src="Assets/Hand/1.jpeg" alt = "temp" class = "slideShowImage" id = "slideShowSix">
                 <div class = "slideShowButtons">
                     <button class = "slideShowButtonRight" onclick="slideChangeSix('left')">←</button>
-                    <p class = "slideShowCount"><span id = "slideShowSixCount">1</span>/3</p>
+                    <p class = "slideShowCount"><span id = "slideShowSixCount">1</span>/4</p>
                     <button class = "slideShowButtonLeft" onclick="slideChangeSix('right')">→</button>
                 </div>
             </div>
@@ -399,12 +399,22 @@
                     <p class = "paintingTitle">Abstract</p>
                     <p class = "paintingStyle">Pen on Paper</p>
                 </div>
+                <div class = "singleArtWork">
+                    <img src = "Assets/Metal.png" alt = "Metal" class = "artWorkImage">
+                    <p class = "paintingTitle">Metal</p>
+                    <p class = "paintingStyle">Photoshop</p>
+                </div>
             </div>
             <div class = "columnRight">
                 <div class = "singleArtWork">
                     <img src = "Assets/Valley Purple.jpeg" alt = "Valley" class = "artWorkImage">
                     <p class = "paintingTitle">Valley</p>
                     <p class = "paintingStyle">Pen on Paper</p>
+                </div>
+                <div class = "singleArtWork">
+                    <img src = "Assets/Ordain.png" alt = "Ordain" class = "artWorkImage">
+                    <p class = "paintingTitle">Ordain</p>
+                    <p class = "paintingStyle">Photoshop</p>
                 </div>
             </div>
         </div>
@@ -423,6 +433,39 @@
                     <button class = "slideShowButtonLeft" onclick="slideChangeSeven('right')">→</button>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div id = "sectionEight">
+        <div class = "youtubeVideo">
+            <div class = "slideShowHeading">
+                <p><span class = "slideShowHeadingSpan">Halloween Escape,</span> Stop Motion</p>
+            </div>
+            <video controls class="video">
+                <source src="Assets/Videos/Stop Motion.mp4" type="video/mp4">
+            </video>
+        </div>
+    </div>
+
+    <div id = "sectionEight">
+        <div class = "youtubeVideo">
+            <div class = "slideShowHeading">
+                <p><span class = "slideShowHeadingSpan">J-Pops Commercial,</span> Edited Advertisement</p>
+            </div>
+            <video controls class="video">
+                <source src="Assets/Videos/Commercial.mp4" type="video/mp4">
+            </video>
+        </div>
+    </div>
+
+    <div id = "sectionEight">
+        <div class = "youtubeVideo">
+            <div class = "slideShowHeading">
+                <p><span class = "slideShowHeadingSpan">Babolat Commercial,</span> Filmed Advertisement</p>
+            </div>
+            <video controls class="video">
+                <source src="Assets/Videos/Tennis.mp4" type="video/mp4">
+            </video>
         </div>
     </div>
 
